--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="utf-8">
         <title>Two Brave Dogs Development</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../img/favicon.png">
     </head>
+
     <body>
         <header>
-            <h1>Two Brave Dogs</h1>
+            <img src="img/tbd-classic.png">
         </header>
-        <p>Working on it!</p>
-        <p>Seriously</p>
-        <p>3rd Re-Init, tho</p>
-            <!-- Some Content, yo-->
-            <script src="code.js"></script>
+        <h1>Portfolio</h1>
+        <ul>
+            <li><a href="projects/funfacts/index.html">100 Random Fun Facts</a></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+
+        </ul>
+        <!-- Some Content, yo-->
+        <script src="../javascript/code.js"></script>
     </body>
 </html>
