--- a/index.html
+++ b/index.html
@@ -1,31 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Project 2 - Responsive Design</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,400,700" rel="stylesheet">
+  </head>
 
-    <head>
-        <meta charset="utf-8">
-        <title>Two Brave Dogs Development</title>
-        <link rel="stylesheet" href="../css/style.css">
-        <link rel="icon" href="../img/favicon.png">
-    </head>
-
-    <body>
-        <header>
-            <img src="img/tbd-classic.png">
-        </header>
-        <h1>Portfolio</h1>
+  <body>
+    <header>
+      <div class="top-nav1024">
+      <h1 id="top">Student Name</h1>
+      <nav class="top-nav">
         <ul>
-            <li><a href="projects/funfacts/index.html">100 Random Fun Facts</a></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-
+          <li><a href="#">Home</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
-        <!-- Some Content, yo-->
-        <script src="../javascript/code.js"></script>
-    </body>
+      </nav>
+      </div>
+      <div class="profile">
+        <img src="images/responsive-layout-profile.png" alt="A picture of me (not)">
+        <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+      </div>
+    </header>
+
+    <h2 id="portfolio">Portfolio</h2>
+
+    <div class="portfolio-wrapper">
+      <div class="col-left col-left1024">
+        <img src="img/project-1.png" alt="Blue marketing box" height="512" width="845">
+        <h3>Marketing Page</h3>
+        <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+      </div>
+
+      <div class="col-right col-mid1024">
+        <img src="img/project-2.png" alt="Yellow search page box" height="512" width="845">
+        <h3>Search Page</h3>
+        <p>This project searches through a specific database to find information that the user is trying to look up.</p>
+      </div>
+
+      <div class="col-left col-right1024">
+        <img src="img/project-3.png" alt="Blue travel app box" height="512" width="845">
+        <h3>Travel App</h3>
+        <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+      </div>
+
+      <div class="col-right col-left1024">
+        <img src="images/project-4.png" alt="Greenish map box" height="512" width="845">
+        <h3>Map of Favorite Spots</h3>
+        <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+      </div>
+
+      <div class="col-left col-mid1024">
+        <img src="img/future-project.png" alt="Purple photo gallery box" height="512" width="845">
+        <h3>Photo Gallery</h3>
+        <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+      </div>
+
+      <div class="col-right col-right1024">
+        <img src="img/future-project.png" alt="Borimng grey calculator box" height="512" width="845">
+        <h3>Calculator</h3>
+        <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+      </div>
+    </div> <!-- portfolio-wrapper -->
+
+    <div class="clearfix">
+      <div class="skills">
+      <h2 id="skills">Skills</h2>
+        <p>As a front-end developer, I have the some very imporatnt skills. Most importantly, I have the skill to add this section, with out causing the footer div to collapse and create a really big headache.</p>
+      </div> <!-- skills div -->
+
+      <footer>
+        <h4 id="contact">Contact</h4>
+          <p class="contact-blurb">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+
+          <p>Phone <span class="phoneAndEmail">+1 (111) 555-1234</span></p>
+          <p>Email <a class="phoneAndEmail">email@yoursite.com</a></p>
+
+          <hr class="ruler">
+
+          <nav class="bottom-nav"> <!-- small screen bottom menu -->
+            <ul>
+              <li class="bottom-name">Student Name</li>
+              <li class="btt"><a href="#">BACK TO TOP</a></li>
+            </ul>
+          </nav>
+
+          <nav class="bottom-nav768"> <!-- lg and med screen bottom menu -->
+            <p class="bottom-name768">Student Name</p>
+            <ul class="bottom-nav768">
+              <li><a href="#">Home</a></li>
+              <li><a href="#portfolio">Portfolio</a></li>
+              <li><a href="#skills">Skills</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </nav>
+      </footer>
+    </div> <!-- clearfix div -->
+  </body>
 </html>
