Site Redirect Commit

--- a/index.html
+++ b/index.html
@@ -1,88 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link
-         rel="stylesheet"
-         href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-      />
-      <link rel="stylesheet" href="css/style.css" />
-
-      <title>Two Brave Dogs Web Development</title>
+      <meta http-equiv="Refresh" content="7;https://realjhoo.com">
+      <title>Two Brave Dogs</title>
    </head>
    <body>
-      <header class="bg">
-         <div class="content">
-            <img src="images/dog2.png" class="logo alt="Two Brave Dogs">
-            <div class="title">
-               Two Brave Dogs Web Development
-            </div>
-            <div class="text">
-               Hi! We build beautiful web sites. What can we build for you?
-            </div>
-         </div>
-      </header>
-
-      <!-- SERVICES =-=-=-=-=-=-=-=-=-=-=-=-=-= -->
-      <section class="services">
-         <div class="container grid-3 center">
-            <div>
-               <a href="#">
-                  <i class="fas fa-code fa-3x"></i>
-                  <h3>Our Services</h3>
-               </a>
-               <p>
-                  Check out what we can build for you.
-               </p>
-            </div>
-
-            <div>
-               <a href="#">
-                  <i class="fas fa-desktop fa-3x"></i>
-                  <h3>Our Portfolio</h3>
-               </a>
-               <p>
-                  Have a look at our work for some of our clients.
-               </p>
-            </div>
-
-            <div>
-               <a href="#">
-                  <i class="fas fa-address-book fa-3x"></i>
-                  <h3>Contact Us</h3>
-               </a>
-               <p>
-                  Want to learn more about how we can help you? We are just an
-                  email away!
-               </p>
-            </div>
-         </div>
-      </section>
-
-      <!-- ABOUT =-=-=-=-=-=-=-=-=-=-=-= -->
-      <section class="about bg-light">
-         <div class="container">
-            <div class="grid-2">
-               <div class="center">
-                  <i class="fas fa-laptop-code fa-10x"></i>
-               </div>
-               <div>
-                  <h3>About Us</h3>
-                  <p>
-                     Two Brave Dogs was founded in 2012 to build beautiful and
-                     functional websites. Let us put our passion to create to
-                     work for you! Our team has been building websites for more
-                     than 20 years, In that time, the technology of the web has
-                     changed alot, and we have changed with it, building elegant
-                     modern designs that keep people engaged.
-                  </p>
-               </div>
-            </div>
-         </div>
-      </section>
-      <footer class="center bg-dark">
-         <p>&copy; 2019 Two Brave Dogs</p>
-      </footer>
+      <p>You will be redirected in 7 seconds. If that fails to happen, <a href="https://realjhoo.com">click here</a></p>
    </body>
 </html>
